[package]
name = "paskur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
